[07/27/22 v0.0.1]
-These powerups now appear on the Active Powerup Display:
    -Large Ball, Shrink, Bypass, Warp, Forcefield, Laceration, Slug, Tractor
-Added visual effects for Gravity and Antigravity
-Gravity, Antigravity, and Sight Laser now affect all balls all the time without
    overriding the previous ball Powerups
-Fixed Glue not working
-Nervous Paddle now shakes 3 times as fast and no longer crashes against the walls

[07/24/22 v0.0.0]
-Added Version Number
-Added Active Powerup Display
-Fixed Snapper animation not playing

[01/27/22]
-Added Tooltips
-Link Lasers Tools now gets deselected when the player clicks on a Brick or Patch button
-Global Powerup Spawn Chance changed from 15% -> 12%
-Fixed Orbit not releasing balls when it gets cleared
-Also made Orbit behave more like Catch, preventing the paddle's weapons from firing while
    there are balls attached
-Added Tiki Brick and Slot Machine Brick sounds
-Added Menacer coating Brick sound
-Added Acid Ball particle effects

[01/21/22]
-Added "Edit Powerup Chances" menu
-Moved enemy spawn config to a separate menu
-Improved Background Select menu by adding titles

[01/13/22]
-Changed how Laser Gate Bricks are linked
-Instead of channels, these bricks can be manually linked using a special tool.

[01/07/22]
-Added Options

[12/15/21]
-Implemented Campaign
-Implemented Level Manager that allows for copying, moving, and deleting levels

[08/27/21]
-Added experimental playlist feature
    -Levels with "playlist/name" format will automatically be
     put in a playlist
    -Levels without a slash "/" in its name will not be put
     in a playlist
-Speed Blocks now play the proper sound when hit.
-Speed Blocks now obey the speed limit.
-Sequence Blocks are now darkened when they are locked
-Changed Paddle's death animation
-Updated Scatter Bomb Block's sprite

[08/13/21]
-Added ability to save custom levels
-Play Playlist mode is temporarily disabled for now

[08/05/21]
-Implemented Play Playlist mode
